autokey (0.54.4-0~jaunty) jaunty; urgency=low

   Add support for numpad keys, and a few other standard keys that were not handled
   Add AT-SPI interface
   Add ability to choose interface by setting AUTOKEY_INTERFACE environment variable
    
 -- Chris Dekter <cdekter@gmail.com>  Tue, 7 Jul 2009 20:38:05 +1000

autokey (0.54.3-0~jaunty) jaunty; urgency=low

   Fix daemon sometimes dying when receiving events with integer code
   Make daemon find devices using by-path entries instead of relying on HAL
   Update TODO
   Make Comment in .desktop entry nicer. Add GenericName
	
 -- Chris Dekter <cdekter@gmail.com>  Tue, 7 Jul 2009 08:38:05 +1000

autokey (0.54.2-0~jaunty) jaunty; urgency=low

   Fix daemon dropping connection on mouse clicks
   Add logging and command line option to set level to debug
   Add LSB info to daemon script
	
 -- Chris Dekter <cdekter@gmail.com>  Sun, 5 Jul 2009 18:38:05 +1000

autokey (0.54.1-0~jaunty) jaunty; urgency=low

   Refactor daemon so it starts successfully during boot
   Fix problem where daemon exits if run on a PC without a touchpad
   Fix initialisation of global hotkeys
   Fix inability to configure any hotkeys
	
 -- Chris Dekter <cdekter@gmail.com>  Sun, 5 Jul 2009 00:11:05 +1000

autokey (0.54.0-0~jaunty) jaunty; urgency=low

   Add new EvDev interface as an alternative where XRecord is not available.
   Make EvDev the default (changing to XRecord will require hacking the code, for now).
   Fix bug where Cut/Copy/Paste entries under Edit menu were not correctly disabled.
   
   Includes fix for:
   2782632 - Capitalization is applied to macros and specialkeys
	
 -- Chris Dekter <cdekter@gmail.com>  Sat, 4 Jul 2009 12:11:05 +1000

autokey (0.53.1-2~intrepid) intrepid; urgency=low

   Alter cut/copy/paste to release standard key bindings to normal functions
   Break sub plugin input at line endings, in addition to spaces
   Add donate button as per ER 2789380
	